--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<!--    <link href="bootstrap.min.css" rel="stylesheet">-->
+    <!--    <link href="bootstrap.min.css" rel="stylesheet">-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="_ee090a19-5c32-4b6c-9059-85e7386e2ed1.jpg">
 </head>
 <body class="light-mode">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" id="navBrand">Mi Portafolio</a>
+    <img src="_ee090a19-5c32-4b6c-9059-85e7386e2ed1.jpg" alt="Logo" class="navbar-logo">
+    <a class="navbar-brand" href="#" id="navBrand">
+
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,18 +24,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#about" id="navAbout">
-                    <i class="fas fa-info-circle"></i> Sobre mí</a>
+                <a class="nav-link" href="#about" id="navAbout">Sobre mí</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#skills"><i class="fas fa-tools"></i> Habilidades</a>
+                <a class="nav-link" href="#skills"> Habilidades</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#projects" id="navProjects">Proyectos</a>
+                <a class="nav-link" href="#projects" id="navProjects">Experiencia</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#contact" id="navContact">
-                    <i class="fa-solid fa-address-book"></i> Contacto</a>
+                <a class="nav-link" href="#contact" id="navContact">Contacto</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" id="themeToggle"><i class="fas fa-moon"></i>&nbsp;Modo Oscuro</a>
@@ -42,124 +44,159 @@
         </ul>
     </div>
 </nav>
+<div class="container-content">
 
-<header class="jumbotron text-center">
-    <h1 class="display-4" id="headerTitle">Hola, soy Sergio Carvajal</h1>
-    <p class="lead" id="headerSubtitle">Desarrollador Web | Diseñador Gráfico</p>
-</header>
+    <header class="jumbotron text-center">
+        <h1 class="display-4" id="headerTitle">Hola, soy Sergio Carvajal</h1>
+        <p class="lead" id="headerSubtitle"></p>
+    </header>
 
-<section id="about" class="container py-5">
-    <h2 class="text-center" id="aboutTitle">Sobre mí</h2>
-    <p class="text-center" id="aboutText"></p>
-</section>
+    <section id="about" class="container py-5">
+        <h2 class="text-center" id="aboutTitle">Sobre mí</h2>
+        <p class="text-center" id="aboutText"></p>
+    </section>
 
-<section id="skills" class="container py-5">
-    <h2 class="text-center"><i class="fas fa-tools"></i> Habilidades</h2>
+    <!--    skills-->
+    <section id="skills" class="container py-5">
+        <h2 class="text-center"><i class="fas fa-tools"></i> Habilidades</h2>
 
-    <!-- Sección de Lenguajes de Programación -->
-    <div class="skills-section">
-        <h3 class="section-title">Lenguajes de Programación</h3>
-        <div class="row text-center my-4">
-            <div class="col-6 col-md-4">
-                <i class="fab fa-html5 fa-2x html5-icon"></i>
-                <h3>HTML5</h3>
-            </div>
-            <div class="col-6 col-md-4 css3-icon">
-                <i class="fab fa-css3-alt fa-2x"></i>
-                <h3>CSS3</h3>
-            </div>
-            <div class="col-6 col-md-4 js-icon">
-                <i class="fab fa-js fa-2x"></i>
-                <h3>JavaScript</h3>
-            </div>
+        <!-- Sección de Lenguajes de Programación -->
+        <div class="skills-section">
+            <h3 class="section-title">Lenguajes de Programación</h3>
+            <div class="row text-center my-4">
+                <div class="col-6 col-md-4">
+                    <i class="fab fa-html5 fa-2x html5-icon"></i>
+                    <h3>HTML5</h3>
+                </div>
+                <div class="col-6 col-md-4 css3-icon">
+                    <i class="fab fa-css3-alt fa-2x"></i>
+                    <h3>CSS3</h3>
+                </div>
+                <div class="col-6 col-md-4 js-icon">
+                    <i class="fab fa-js fa-2x"></i>
+                    <h3>JavaScript</h3>
+                </div>
 
-            <div class="col-6 col-md-4">
-                <i class="fab fa-python fa-2x python-icon"></i>
-                <h3>Python</h3>
-            </div>
+                <div class="col-6 col-md-4">
+                    <i class="fab fa-python fa-2x python-icon"></i>
+                    <h3>Python</h3>
+                </div>
 
-            <div class="col-6 col-md-4">
-                <i class="fab fa-java fa-2x java-icon"></i>
-                <h3>Java</h3>
-            </div>
-        </div>
-    </div>
-
-    <!-- Sección de Frameworks -->
-    <div class="skills-section">
-        <h3 class="section-title">Frameworks</h3>
-        <div class="row text-center">
-            <div class="col-6 col-md-4 col-lg-3">
-                <i class="fab fa-node fa-2x nodejs-icon"></i>
-                <h4>NodeJS</h4>
-            </div>
-
-            <div class="col-6 col-md-4 col-lg-3">
-                <i class="fab fa-react fa-2x react-icon"></i>
-                <h4>React</h4>
-            </div>
-
-            <div class="col-6 col-md-4 col-lg-3">
-                <i class="fab fa-angular fa-2x angular-icon"></i>
-                <h4>Angular</h4>
-            </div>
-
-            <div class="col-6 col-md-4 col-lg-3">
-                <i class="fab fa-vuejs fa-2x vue-icon"></i>
-                <h4>Vue.js</h4>
+                <div class="col-6 col-md-4">
+                    <i class="fab fa-java fa-2x java-icon"></i>
+                    <h3>Java</h3>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Sección de Bases de Datos -->
-    <div class="skills-section">
-        <h3 class="section-title">Bases de Datos</h3>
-        <div class="row text-center">
-            <div class="col-6 col-md-4 col-lg-3">
-                <i class="fas fa-database fa-2x oracle-icon"></i>
-                <h4>Oracle</h4>
-            </div>
-            <div class="col-6 col-md-4 col-lg-3">
-                <i class="fas fa-database fa-2x database-icon"></i>
-                <h4>MySQL</h4>
-            </div>
+        <!-- Sección de Frameworks -->
+        <div class="skills-section">
+            <h3 class="section-title">Frameworks</h3>
+            <div class="row text-center">
+                <div class="col-6 col-md-4 col-lg-3">
+                    <i class="fab fa-node fa-2x nodejs-icon"></i>
+                    <h4>NodeJS</h4>
+                </div>
 
-            <div class="col-6 col-md-4 col-lg-3">
-                <i class="fas fa-database fa-2x nodejs-icon"></i>
-                <h4>MongoDb</h4>
-            </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <i class="fab fa-react fa-2x react-icon"></i>
+                    <h4>React</h4>
+                </div>
 
-        </div>
-    </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <i class="fab fa-angular fa-2x angular-icon"></i>
+                    <h4>Angular</h4>
+                </div>
 
-</section>
-
-<section id="contact" class="container py-5">
-    <h2 class="text-center" id="contactTitle"><i class="fas fa-address-book"></i> Contacto</h2>
-    <form>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="name" id="contactNameLabel"><i class="fas fa-user"></i> Nombre</label>
-                <input type="text" class="form-control" id="name" placeholder="Tu nombre">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="email" id="contactEmailLabel"><i class="fas fa-envelope"></i> Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Tu email">
+                <div class="col-6 col-md-4 col-lg-3">
+                    <i class="fab fa-vuejs fa-2x vue-icon"></i>
+                    <h4>Vue.js</h4>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <label for="message" id="contactMessageLabel"><i class="fas fa-comment"></i> Mensaje</label>
-            <textarea class="form-control" id="message" rows="4" placeholder="Tu mensaje"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary" id="contactSubmitButton"><i class="fas fa-paper-plane"></i> Enviar
-        </button>
-    </form>
-</section>
 
+        <!-- Sección de Bases de Datos -->
+        <div class="skills-section">
+            <h3 class="section-title">Bases de Datos</h3>
+            <div class="row text-center">
+                <div class="col-6 col-md-4 col-lg-3">
+                    <i class="fas fa-database fa-2x oracle-icon"></i>
+                    <h4>Oracle</h4>
+                </div>
+                <div class="col-6 col-md-4 col-lg-3">
+                    <i class="fas fa-database fa-2x database-icon"></i>
+                    <h4>MySQL</h4>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-3">
+                    <i class="fas fa-database fa-2x nodejs-icon"></i>
+                    <h4>MongoDb</h4>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+    <!--    Experience-->
+    <section id="experience" class="container py-5">
+        <div class="container py-5">
+            <h2 class="text-center"><i class="fas fa-briefcase"></i> Experiencia</h2>
+
+            <div class="experience-item">
+                <h3>Analista de Desarrollo</h3>
+                <h4> ActiveOne SAS, Medellín, Colombia </h4>
+                <p><i class="fas fa-calendar-alt"></i> MAYO 2021 - FEBRERO DE 2024</p>
+                <ul class="list-group list-group-flush">
+                    <li>Desarrollar aplicaciones web.</li>
+                    <li>Desarrollo de aplicativos móviles.</li>
+                    <li>Despliegue continuo con Jenkins.</li>
+                    <li>Creación de arquitecturas en angular.</li>
+                    <li>Manejo de base de datos</li>
+                </ul>
+            </div>
+
+            <div class="experience-item">
+                <h3>Analista de Desarrollo</h3>
+                <h4>Fábrica de Software Sena, Medellín, Colombia </h4>
+                <p><i class="fas fa-calendar-alt"></i> JUNIO DE 2020 - NOVIEMBRE DE 2020</p>
+                <ul class="list-group list-group-flush">
+                    <li>Desarrollo de aplicativos móviles.</li>
+                    <li>Desarrollo de aplicaciones web.</li>
+                    <li>Integraciones API Rest.</li>
+                    <li>Despliegues en VPS y Heroku.</li>
+                </ul>
+
+            </div>
+            <!-- Agrega más experiencia según sea necesario -->
+        </div>
+    </section>
+    <!--    Contact-->
+    <section id="contact" class="container py-5">
+        <h2 class="text-center" id="contactTitle">Contacto</h2>
+        <form>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="name" id="contactNameLabel">Nombre</label>
+                    <input type="text" class="form-control" id="name" placeholder="Tu nombre">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="email" id="contactEmailLabel">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Tu email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="message" id="contactMessageLabel">Mensaje</label>
+                <textarea class="form-control" id="message" rows="4" placeholder="Tu mensaje"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" id="contactSubmitButton"><i class="fas fa-paper-plane"></i>
+                Enviar
+            </button>
+        </form>
+    </section>
+</div>
 <footer class="text-center py-4">
-    <p>&copy; 2024 Sergio Carvajal. Todos los derechos reservados.</p>
+    <p class="text-light">&copy; 2024 Sergio Carvajal</p>
 </footer>
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
