--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!--    <link href="bootstrap.min.css" rel="stylesheet">-->
+        <link href="assets/docs/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/docs/styles.css">
     <link rel="icon" href="assets/docs/ee090a19-5c32-4b6c-9059-85e7386e2ed1.jpg">
 </head>
 <body class="light-mode">
