--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Portfolio Sergio Carvajal</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
     <!-- Font Awesome icons (free version)-->
@@ -41,11 +41,11 @@
     </div>
 </nav>
 <!-- Masthead-->
-<header class="masthead bg-primary text-white text-center">
+<header class="masthead bg-secondary text-white text-center">
     <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image-->
         <img class="masthead-avatar mb-5" src="assets/img/portfolio/ee090a19-5c32-4b6c-9059-85e7386e2ed1.jpg"
-             alt="..."/>
+             alt="foto animada"/>
         <!-- Masthead Heading-->
         <h1 class="masthead-heading text-uppercase mb-0">Sergio Carvajal</h1>
         <!-- Icon Divider-->
@@ -73,32 +73,38 @@
         <div class="row justify-content-center">
             <!-- Portfolio Item 1-->
             <div class="col-md-6 col-lg-4 mb-5">
+                <h5 class="text-center text-uppercase text-secondary mb-0">Education</h5>
+                <div class="divider-custom"></div>
                 <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white"><i
                                 class="fas fa-plus fa-3x"></i></div>
                     </div>
-                    <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..."/>
+                    <img class="img-fluid" src="assets/img/portfolio/logo-estudios.jpg" alt="estudios"/>
                 </div>
             </div>
             <!-- Portfolio Item 2-->
             <div class="col-md-6 col-lg-4 mb-5">
+                <h5 class="text-center text-uppercase text-secondary mb-0">Skills</h5>
+                <div class="divider-custom"></div>
                 <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white"><i
                                 class="fas fa-plus fa-3x"></i></div>
                     </div>
-                    <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..."/>
+                    <img class="img-fluid" src="assets/img/portfolio/logo-skills.jpg" alt="habilidades"/>
                 </div>
             </div>
             <!-- Portfolio Item 3-->
             <div class="col-md-6 col-lg-4 mb-5">
+                <h5 class="text-center text-uppercase text-secondary mb-0">Experience</h5>
+                <div class="divider-custom"></div>
                 <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white"><i
                                 class="fas fa-plus fa-3x"></i></div>
                     </div>
-                    <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="..."/>
+                    <img class="img-fluid" src="assets/img/portfolio/foto-experiencia.jpg" alt="experience"/>
                 </div>
             </div>
             <!-- Portfolio Item 4-->
@@ -171,66 +177,14 @@
         <!-- Contact Section Form-->
         <div class="row justify-content-center">
             <div class="col-lg-8 col-xl-7">
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- * * SB Forms Contact Form * *-->
-                <!-- * * * * * * * * * * * * * * *-->
-                <!-- This form is pre-integrated with SB Forms.-->
-                <!-- To make this form functional, sign up at-->
-                <!-- https://startbootstrap.com/solution/contact-forms-->
-                <!-- to get an API token!-->
-                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                    <!-- Name input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="name" type="text" placeholder="Enter your name..."
-                               data-sb-validations="required"/>
-                        <label for="name">Full name</label>
-                        <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                <div class="input-group">
+                    <input type="text" id="email" class="form-control" aria-label="Text input with dropdown button">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" id="buttonCopyEmail">
+                            <i class="fas fa-copy fa-fw"></i>
+                        </button>
                     </div>
-                    <!-- Email address input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="email" type="email" placeholder="name@example.com"
-                               data-sb-validations="required,email"/>
-                        <label for="email">Email address</label>
-                        <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                        <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                    </div>
-                    <!-- Phone number input-->
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890"
-                               data-sb-validations="required"/>
-                        <label for="phone">Phone number</label>
-                        <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.
-                        </div>
-                    </div>
-                    <!-- Message input-->
-                    <div class="form-floating mb-3">
-                        <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..."
-                                  style="height: 10rem" data-sb-validations="required"></textarea>
-                        <label for="message">Message</label>
-                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                    </div>
-                    <!-- Submit success message-->
-                    <!---->
-                    <!-- This is what your users will see when the form-->
-                    <!-- has successfully submitted-->
-                    <div class="d-none" id="submitSuccessMessage">
-                        <div class="text-center mb-3">
-                            <div class="fw-bolder">Form submission successful!</div>
-                            To activate this form, sign up at
-                            <br/>
-                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                        </div>
-                    </div>
-                    <!-- Submit error message-->
-                    <!---->
-                    <!-- This is what your users will see when there is-->
-                    <!-- an error submitting the form-->
-                    <div class="d-none" id="submitErrorMessage">
-                        <div class="text-center text-danger mb-3">Error sending message!</div>
-                    </div>
-                    <!-- Submit Button-->
-                    <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
@@ -241,8 +195,11 @@
         <div class="row">
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4">Around the Web</h4>
-                <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/SergioC2K"><i class="fab fa-fw fa-github"></i></a>
-                <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/sergio-andres-carvajal-gomez-453a331a2"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/SergioC2K"><i
+                        class="fab fa-fw fa-github"></i></a>
+                <a class="btn btn-outline-light btn-social mx-1"
+                   href="https://www.linkedin.com/in/sergio-andres-carvajal-gomez-453a331a2"><i
+                        class="fab fa-fw fa-linkedin-in"></i></a>
             </div>
         </div>
     </div>
@@ -252,7 +209,7 @@
     <div class="container"><small>&copy; Sergio Carvajal 2024</small></div>
 </div>
 <!-- Portfolio Modals-->
-<!-- Portfolio Modal 1-->
+<!-- Modal Estudios-->
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1"
      aria-hidden="true">
     <div class="modal-dialog modal-xl">
@@ -265,7 +222,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Education</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -273,11 +230,14 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..."/>
+                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/logo-estudios.jpg"
+                                 alt="estudios"/>
                             <!-- Portfolio Modal - Text-->
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit
-                                asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <p class="mb-4">
+                                OCTOBER 2018 - OCTOBER 2020
+                                Sena centro de servicios y gestión empresarial, Medellín, Colombia - Technologist in
+                                Information Systems Analysis and Development
+                            </p>
                             <button class="btn btn-primary" data-bs-dismiss="modal">
                                 <i class="fas fa-xmark fa-fw"></i>
                                 Close Window
@@ -289,7 +249,7 @@
         </div>
     </div>
 </div>
-<!-- Portfolio Modal 2-->
+<!-- Modal Habilidades-->
 <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2"
      aria-hidden="true">
     <div class="modal-dialog modal-xl">
@@ -302,7 +262,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Skills</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -310,11 +270,21 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..."/>
+                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/logo-skills.jpg"
+                                 alt="habilidades"/>
                             <!-- Portfolio Modal - Text-->
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit
-                                asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <p class="mb-4">
+                                HTML
+                                CSS
+                                JAVA
+                                JAVASCRIPT
+                                ANGULAR
+                                VUE
+                                DART
+                                GIT
+                                ORACLE
+
+                            </p>
                             <button class="btn btn-primary" data-bs-dismiss="modal">
                                 <i class="fas fa-xmark fa-fw"></i>
                                 Close Window
@@ -326,7 +296,7 @@
         </div>
     </div>
 </div>
-<!-- Portfolio Modal 3-->
+<!-- Modal Experience-->
 <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3"
      aria-hidden="true">
     <div class="modal-dialog modal-xl">
@@ -339,7 +309,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Experience</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -347,11 +317,27 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..."/>
+                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/foto-experiencia.jpg" alt="experience"/>
                             <!-- Portfolio Modal - Text-->
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque
-                                assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit
-                                asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                            <p class="mb-4">
+                                Experience
+                                MAY 2021  - FEBRUARY  2024
+                                ActiveOne SAS, Medellín, Colombia - Development Analyst
+                                Develop web applications.
+                                Development of mobile applications.
+                                Continuous deployment with Jenkins.
+                                Creation of Angular architectures.
+                                Database management
+                                JUNE 2020 - NOVEMBER  2020
+                                Fábrica de Software Sena, Medellín, Colombia  - Development Analyst
+                                Mobile application development.
+                                Web application development.
+                                Data integrations with facebook.
+                                API Rest integrations.
+                                VPS and Heroku deployments.
+
+
+                            </p>
                             <button class="btn btn-primary" data-bs-dismiss="modal">
                                 <i class="fas fa-xmark fa-fw"></i>
                                 Close Window
@@ -478,10 +464,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
 <script src="js/scripts.js"></script>
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<!-- * *                               SB Forms JS                               * *-->
-<!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
