--- a/index.html
+++ b/index.html
@@ -157,6 +157,20 @@
                     transportation of tariffs, medical checks, battery measurement and reporting.
                 </p>
             </div>
+            <div class="col-lg-4">
+                <p class="lead">
+                    I have the ability to adapt to any programming language, find bugs, diagnose issues in everyday
+                    systems, detect security flaws, and identify spam. Currently, I am pursuing a path in cybersecurity
+                    to help and protect vulnerable individuals. Additionally, I can leverage artificial intelligence and
+                    integrate it effectively.
+                </p>
+            </div>
+            <div class="col-lg-4">
+                <p class="lead">
+                    My goal is to become a digital nomad and travel the world, identifying needs and providing solutions
+                    to change the world with technology.
+                </p>
+            </div>
         </div>
     </div>
 </section>
@@ -251,11 +265,6 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <button class="btn btn-primary" data-bs-dismiss="modal">
-                                <i class="fas fa-xmark fa-fw"></i>
-                                Close Window
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -352,10 +361,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="btn btn-primary" data-bs-dismiss="modal">
-                                <i class="fas fa-xmark fa-fw"></i>
-                                Close Window
-                            </button>
                         </div>
                     </div>
                 </div>
@@ -388,7 +393,7 @@
                                 <div class="container">
                                     <div class="experience-item">
                                         <h3>Development Analyst</h3>
-                                        <h4>ActiveOne SAS, Medellín, Colombia - Development Analyst</h4>
+                                        <h4>ActiveOne SAS, Medellín, Colombia</h4>
                                         <p><i class="fas fa-calendar-alt"></i>&nbsp; MAY 2021 - FEBRUARY 2024</p>
                                         <ul class="list-group list-group-flush">
                                             <li>Develop web applications.</li>
@@ -409,15 +414,9 @@
                                             <li>Data integrations with facebook.</li>
                                             <li>API Rest integrations.</li>
                                         </ul>
-
                                     </div>
                                 </div>
                             </div>
-
-                            <button class="btn btn-primary" data-bs-dismiss="modal">
-                                <i class="fas fa-xmark fa-fw"></i>
-                                Close Window
-                            </button>
                         </div>
                     </div>
                 </div>
